# photoplethysmography_explorer

./: .dockerignore  .flake8  .gitignore  DEPLOYMENT.md  Dockerfile.prod  Makefile  QUICKSTART.md  README.md  REFACTORING.md  build_docs.bat  build_docs.py  cloudbuild.yaml  deploy.sh  env.example  fix_imports.py  install_dependencies.py  lint_and_format.py  main-prod.py  nginx.conf  pyproject.toml  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  run_tests.py  setup.py  test_colorlog_fix.py  test_config.py  test_waveform_features.py
.github/workflows/: ci-cd.yml
docs/: README.md  api_reference.rst  conf.py  contributing.rst  development.rst  index.rst  installation.rst  user_guide.rst
legacy/: explore.py  ppg_tool.py
notebooks/: explore.ipynb
src/: app.py
src/callbacks/: __init__.py  data_callbacks.py  plot_callbacks.py  window_callbacks.py
src/components/: layout.py
src/config/: logging_config.py  settings.py
src/utils/: __init__.py  file_utils.py  ppg_analysis.py  signal_processing.py
tests/: __init__.py  conftest.py  run_tests.py  test_callbacks.py  test_config.py  test_integration.py  test_ppg_analysis.py  test_refactored_callbacks.py  test_refactored_code.py  test_utils.py
